# anchor-bun-template

./: .gitignore  .oxfmtrc.json  AGENTS.md  AI_CONTEXT.md  Anchor.toml  README.md  codama.json  mise.toml  package.json  tsconfig.json  txtx.yml
.agents/skills/solana-dev/: SKILL.md
.agents/skills/solana-dev/references/: compatibility-matrix.md  programs-anchor.md  programs-pinocchio.md  security.md  surfpool-cheatcodes.md  surfpool.md
.agents/skills/solana-dev/references/kit/: accounts.md
.cargo/: config.toml
migrations/: deploy.ts
programs/bun-kit/: Cargo.toml
programs/bun-kit/src/: lib.rs
programs/bun-kit/tests/: test_initialize.rs
programs/bun-litesvm-kit/: Cargo.toml
programs/bun-litesvm-kit/src/: lib.rs
programs/bun-litesvm-kit/tests/: test_initialize.rs
programs/jest-multiple/: Cargo.toml
programs/jest-multiple/src/: lib.rs
runbooks/: README.md
runbooks/deployment/: main.tx
tests/: bun_kit.test.ts  jest-multiple.test.ts  kite_example.test.ts
